src/views/ChooseBond/choose-bond.scss
@import 'styles/_colors.scss';
@import 'styles/_mixins.scss';


#choose-bond-view {
  padding: 0px 80px 20px 80px;

  .bond-paper {
    background-color: unset;
  }
  .bond-card-header {
    margin-bottom: 20px;

    .bond-title {
      font-weight: 600;
      font-size: 24px;
      margin-bottom: 20px;

      .bond-title-icon {
        vertical-align: middle;
      }
    }
  }

  .bond-hero-section {
    margin-bottom: 30px;

    .bond-hero-card {
      padding: 20px;
      border-radius: 10px;

      .bond-hero-title {
        font-size: 16px;
        font-weight: 700;
      }

      .bond-hero-value {
        font-size: 24px;
        font-weight: 800;
      }
    }
  }

  .bond-row-container {
    overflow: auto;

    .bond-title-row {
      padding: 0px 32px;
      min-width: 1100px;
      .bond-row-title {
        text-align: right;
        font-size: 16px;
        font-weight: 700;
        padding: 10px;

        &.first-col {
          text-align: left;
        }
      }
    }

    .bond-row {
      min-width: 1100px;
      border-radius: 10px;
      padding: 30px;
      margin-bottom: 20px;
      border: 2px solid #ffffff;
      transition: 0.3s;
      &:hover {
        border: 2px solid #ccd4e0;
        box-shadow: 0px 4px 20px 0px #e9f0f3;
        cursor: pointer;
      }

      .bond-row-logo, .bond-row-value {
        display: flex;
        flex-direction: column;
        justify-content: center;
        .chip--status {
          align-self: flex-end;
        }
      }

      .bond-row-value {
        text-align: right;
        padding: 0px 10px;
        &.first-col {
          text-align: left;
        }
        a {
          transition: 0.25s;
          &:hover {
            text-decoration: underline;
            text-decoration-color: $otter-blue;
          }
        }
      }

      .bond-price-text {
        display: flex;
        justify-content: flex-end;
        align-items: center;
        margin-bottom: 4px;
        .currency-icon {
          display: inline-block;
          margin-right: 4px;
        }
      }
    }
  }

  // common css
  .bond-name-label {
    width: fit-content;
    margin-top: 4px;
  }

  .bond-hero-value {
    // color: $clam-pink;
    font-weight: 800;
    font-size: 24px;
    line-height: 36px;
    display: flex;
    text-align: left;
    align-items: center;
  }
}
.MuiTableBody-root {
  .MuiTableRow-root {
    margin-bottom: 20px;
    // height: 120px;
    border-radius: 20px !important;
    justify-content: space-between;
    display: flex;
    align-items: center;
    border: 1px solid transparent;
    transition: 0.1s ease-in-out;
    cursor: pointer;
  }
  .MuiTableRow-root:hover {
    box-shadow: 0px 0px 0px 2px rgb(163, 163, 163, 0.8) inset;
    border-radius: 20px;
  }
}

@media screen and (max-width: 1400px) {
  #choose-bond-view {
    padding: 0px 30px 20px 30px;
  }
}

@media screen and (max-width: 960px) {
  #choose-bond-view {
    padding: 0px 20px 20px 20px;

    .bond-hero-section {
      margin-bottom: 10px;

      .bond-hero-card {
        padding: 10px 20px;

        .bond-hero-title {
          font-size: 14px;
          text-align: center;
        }

        .bond-hero-value {
          font-size: 20px;
          text-align: center;
        }
      }
    }

    .bond-card-container {
      font-size: 14px;

      .bond-card {
        border-radius: 10px;
        padding: 20px;
        margin-bottom: 20px;

        .bond-avatar-row {
          margin-bottom: 20px;
        }

        .bond-card-value {
          text-align: right;
        }
        
        .vesting-time-text {
          font-weight: 400;
          margin-top: -12px;
        }

        .bond-card-btn-area {
          margin-top: 20px;
        }
      }
    }
  }
}

.bond-card-nft-row {
  font-weight: 500;
  align-self: flex-end;

  .nft-image {
    width: 30px;
    height: 30px;
    border-radius: 4px;
    margin-right: 8px;

    @include otter-images;
    @include background-image-setting($size: cover);
  }
}

